--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -28,7 +28,7 @@ title: Anorex
 
 ![an.jpg]({{site.baseurl}}/assets/images/posts/an.jpg)
 
-![digital_art_texture44re_126tf96ttt_by_mercurycode-d7dvn4h.jpg]({{site.baseurl}}/assets/images/posts/digital_art_texture44re_126tf96ttt_by_mercurycode-d7dvn4h.jpg)
+]({{site.baseurl}}/assets/images/posts/digital_art_texture44re_126tf96ttt_by_mercurycode-d7dvn4h.jpg)
 
 
 ![stålös.jpg]({{site.baseurl}}/assets/images/posts/stålös.jpg)
