--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -4,4 +4,5 @@ published: true
 title: daily pic
 ---
 ![af.jpg]({{site.baseurl}}/assets/images/posts/af.jpg)
+![GODMORNING.jpg]({{site.baseurl}}/assets/images/posts/GODMORNING.jpg)
 
