--- a/_posts/2016-10-04-politik.md
+++ b/_posts/2016-10-04-politik.md
@@ -14,6 +14,8 @@ feature: uk ut ur eu.jpg
 ![maxresdefault.jpg]({{site.baseurl}}/assets/images/posts/maxresdefault.jpg)
 ![t26_RTR15Y30.jpg]({{site.baseurl}}/assets/images/posts/t26_RTR15Y30.jpg)
 ![water-drop-wt.jpg]({{site.baseurl}}/assets/images/posts/water-drop-wt.jpg)
+![af.jpg]({{site.baseurl}}/assets/images/posts/af.jpg)
+
 
 
 
