--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -28,5 +28,5 @@ feature: calle.jpg
 ![winter.jpg]({{site.baseurl}}/assets/images/posts/winter.jpg)
 ![sue-enni7yhgs-art-b87ulue_big.jpg]({{site.baseurl}}/assets/images/posts/sue-enni7yhgs-art-b87ulue_big.jpg)
 ![tsunamo.jpg]({{site.baseurl}}/assets/images/posts/tsunamo.jpg)
-
+![Hurricane_Clouds,_Gulf_of_Mexico,_Cuba.jpg]({{site.baseurl}}/assets/images/posts/Hurricane_Clouds,_Gulf_of_Mexico,_Cuba.jpg)
 
