--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -29,4 +29,5 @@ feature: calle.jpg
 ![sue-enni7yhgs-art-b87ulue_big.jpg]({{site.baseurl}}/assets/images/posts/sue-enni7yhgs-art-b87ulue_big.jpg)
 ![tsunamo.jpg]({{site.baseurl}}/assets/images/posts/tsunamo.jpg)
 ![Hurricane_Clouds,_Gulf_of_Mexico,_Cuba.jpg]({{site.baseurl}}/assets/images/posts/Hurricane_Clouds,_Gulf_of_Mexico,_Cuba.jpg)
+![lika robot.jpg]({{site.baseurl}}/assets/images/posts/lika robot.jpg)
 
