--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -7,6 +7,8 @@ feature: calle.jpg
 ![calle.jpg]({{site.baseurl}}/assets/images/posts/calle.jpg)
 ![midsommar 1184 32439.jpg]({{site.baseurl}}/assets/images/posts/midsommar 1184 32439.jpg)
 ![paranoja.jpg]({{site.baseurl}}/assets/images/posts/paranoja.jpg)
+![ande.jpg]({{site.baseurl}}/assets/images/posts/ande.jpg)
+
 
 ![BlackWhi66te68x5199077small copy.jpg]({{site.baseurl}}/assets/images/posts/BlackWhi66te68x5199077small copy.jpg)
 ![Copy (2) of frakt2393al2.jpg]({{site.baseurl}}/assets/images/posts/Copy (2) 
