--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -8,6 +8,8 @@ feature: calle.jpg
 ![midsommar 1184 32439.jpg]({{site.baseurl}}/assets/images/posts/midsommar 1184 32439.jpg)
 ![paranoja.jpg]({{site.baseurl}}/assets/images/posts/paranoja.jpg)
 ![ande.jpg]({{site.baseurl}}/assets/images/posts/ande.jpg)
+![herre jesus.jpg]({{site.baseurl}}/assets/images/posts/herre jesus.jpg)
+
 
 
 ![BlackWhi66te68x5199077small copy.jpg]({{site.baseurl}}/assets/images/posts/BlackWhi66te68x5199077small copy.jpg)
