--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -9,6 +9,8 @@ feature: calle.jpg
 ![paranoja.jpg]({{site.baseurl}}/assets/images/posts/paranoja.jpg)
 ![ande.jpg]({{site.baseurl}}/assets/images/posts/ande.jpg)
 ![herre jesus.jpg]({{site.baseurl}}/assets/images/posts/herre jesus.jpg)
+![IMG_44536.jpg]({{site.baseurl}}/assets/images/posts/IMG_44536.jpg)
+
 
 
 
