--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -10,6 +10,8 @@ feature: calle.jpg
 ![ande.jpg]({{site.baseurl}}/assets/images/posts/ande.jpg)
 ![herre jesus.jpg]({{site.baseurl}}/assets/images/posts/herre jesus.jpg)
 ![IMG_44536.jpg]({{site.baseurl}}/assets/images/posts/IMG_44536.jpg)
+![intentional self harm.jpg]({{site.baseurl}}/assets/images/posts/intentional self harm.jpg)
+
 
 
 
