--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -12,6 +12,7 @@ feature: calle.jpg
 ![IMG_44536.jpg]({{site.baseurl}}/assets/images/posts/IMG_44536.jpg)
 ![intentional self harm.jpg]({{site.baseurl}}/assets/images/posts/intentional self harm.jpg)
 ![m130113-051x.jpg]({{site.baseurl}}/assets/images/posts/m130113-051x.jpg)
+![managing-lo486neliness.jpg]({{site.baseurl}}/assets/images/posts/managing-lo486neliness.jpg)
 
 
 
