--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -13,6 +13,8 @@ feature: calle.jpg
 ![intentional self harm.jpg]({{site.baseurl}}/assets/images/posts/intentional self harm.jpg)
 ![m130113-051x.jpg]({{site.baseurl}}/assets/images/posts/m130113-051x.jpg)
 ![managing-lo486neliness.jpg]({{site.baseurl}}/assets/images/posts/managing-lo486neliness.jpg)
+![Ray_of4_Light_6Wide.jpg]({{site.baseurl}}/assets/images/posts/Ray_of4_Light_6Wide.jpg)
+
 
 
 
