--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -14,6 +14,7 @@ feature: calle.jpg
 ![m130113-051x.jpg]({{site.baseurl}}/assets/images/posts/m130113-051x.jpg)
 ![managing-lo486neliness.jpg]({{site.baseurl}}/assets/images/posts/managing-lo486neliness.jpg)
 ![Ray_of4_Light_6Wide.jpg]({{site.baseurl}}/assets/images/posts/Ray_of4_Light_6Wide.jpg)
+![zombie.jpg]({{site.baseurl}}/assets/images/posts/zombie.jpg)
 
 
 
