--- a/_posts/2016-10-04-art.md
+++ b/_posts/2016-10-04-art.md
@@ -7,19 +7,12 @@ feature: bored.jpg
 
 
 ![139.jpg]({{site.baseurl}}/assets/images/posts/139.jpg)
-
-
-
-
 ![0112122998692005.jpg]({{site.baseurl}}/assets/images/posts/0112122998692005.jpg)
-
 ![betry.jpg]({{site.baseurl}}/assets/images/posts/betry.jpg)
 
 ![cordis.jpg]({{site.baseurl}}/assets/images/posts/cordis.jpg)
 ![bored.jpg]({{site.baseurl}}/assets/images/posts/bored.jpg)
-![]({{site.baseurl}}/assets/images/posts/demon.jpg)
-![entegrity.jpg]({{site.baseurl}}/assets/images/posts/entegrity.jpg)
-![Hyperbolic_orthogonal_1dod8ecahedral_honeycomb.jpg]({{site.baseurl}}/assets/images/posts/Hyperbolic_orthogonal_1dod8ecahedral_honeycomb.jpg)
+]({{site.baseurl}}/assets/images/posts/Hyperbolic_orthogonal_1dod8ecahedral_honeycomb.jpg)
 ![]({{site.baseurl}}/assets/images/posts/jessicaface.jpg)
 ![]({{site.baseurl}}/assets/images/posts/mammas%20pojke2.jpg)
 ![maple-in-autumn-1920x1080-wallpaper-3470 (2).jpg]({{site.baseurl}}/assets/images/posts/maple-in-autumn-1920x1080-wallpaper-3470 (2).jpg)
@@ -58,4 +51,3 @@ feature: bored.jpg
 ![roger.jpg]({{site.baseurl}}/assets/images/posts/roger.jpg)
 ![storebror.jpg]({{site.baseurl}}/assets/images/posts/storebror.jpg)
 ![]({{site.baseurl}}/assets/images/posts/soldier%20red.jpg)![]
-
