--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -4,6 +4,7 @@ published: true
 title: fidelis ad mortem
 feature: calle.jpg
 ---
+![Winter_loneliness_by_4tzu8noi.jpg]({{site.baseurl}}/assets/images/posts/Winter_loneliness_by_4tzu8noi.jpg)
 ![calle.jpg]({{site.baseurl}}/assets/images/posts/calle.jpg)
 ![midsommar 1184 32439.jpg]({{site.baseurl}}/assets/images/posts/midsommar 1184 32439.jpg)
 ![paranoja.jpg]({{site.baseurl}}/assets/images/posts/paranoja.jpg)
@@ -15,11 +16,6 @@ feature: calle.jpg
 ![managing-lo486neliness.jpg]({{site.baseurl}}/assets/images/posts/managing-lo486neliness.jpg)
 ![Ray_of4_Light_6Wide.jpg]({{site.baseurl}}/assets/images/posts/Ray_of4_Light_6Wide.jpg)
 ![zombie.jpg]({{site.baseurl}}/assets/images/posts/zombie.jpg)
-
-
-
-
-
 
 
 ![maple-in-autumn-1920x1080-wallpaper-3470.jpg]({{site.baseurl}}/assets/images/posts/maple-in-autumn-1920x1080-wallpaper-3470.jpg)
