--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -7,4 +7,5 @@ feature: '![GODMORNING.jpg]'
 
 ![GODMORNING.jpg]({{site.baseurl}}/assets/images/posts/GODMORNING.jpg)
 ![af.jpg]({{site.baseurl}}/assets/images/posts/af.jpg)
+![BO.jpg]({{site.baseurl}}/assets/images/posts/BO.jpg)
 
