--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -6,6 +6,7 @@ feature: '![GODMORNING.jpg]'
 ---
 
 ![GODMORNING.jpg]({{site.baseurl}}/assets/images/posts/GODMORNING.jpg)
+![towardtheendoftime.jpg]({{site.baseurl}}/assets/images/posts/towardtheendoftime.jpg)
+
 
 ![BO.jpg]({{site.baseurl}}/assets/images/posts/BO.jpg)
-
