--- a/_posts/2016-10-04-politik.md
+++ b/_posts/2016-10-04-politik.md
@@ -12,6 +12,8 @@ feature: uk ut ur eu.jpg
 ![t26_RTR15Y30.jpg]({{site.baseurl}}/assets/images/posts/t26_RTR15Y30.jpg)
 ![water-drop-wt.jpg]({{site.baseurl}}/assets/images/posts/water-drop-wt.jpg)
 ![af.jpg]({{site.baseurl}}/assets/images/posts/af.jpg)
+![lib66e4rte.jpg]({{site.baseurl}}/assets/images/posts/lib66e4rte.jpg)
+
 
 
 
