--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -12,9 +12,7 @@ feature: tsunami.jpg
 ![6.jpg]({{site.baseurl}}/assets/images/posts/6.jpg)
 ![ökökensam1.jpg]({{site.baseurl}}/assets/images/posts/ökökensam1.jpg)
 ![nucleardrem.jpg]({{site.baseurl}}/assets/images/posts/nucleardrem.jpg)
-
-
-
 ![its over.jpg]({{site.baseurl}}/assets/images/posts/its over.jpg)
 ![ghost.jpg]({{site.baseurl}}/assets/images/posts/ghost.jpg)
+![absar.jpg]({{site.baseurl}}/assets/images/posts/absar.jpg)
 
