--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -16,6 +16,8 @@ feature: calle.jpg
 ![managing-lo486neliness.jpg]({{site.baseurl}}/assets/images/posts/managing-lo486neliness.jpg)
 ![Ray_of4_Light_6Wide.jpg]({{site.baseurl}}/assets/images/posts/Ray_of4_Light_6Wide.jpg)
 ![zombie.jpg]({{site.baseurl}}/assets/images/posts/zombie.jpg)
+![absar.jpg]({{site.baseurl}}/assets/images/posts/absar.jpg)
+
 
 
 ![maple-in-autumn-1920x1080-wallpaper-3470.jpg]({{site.baseurl}}/assets/images/posts/maple-in-autumn-1920x1080-wallpaper-3470.jpg)
@@ -35,4 +37,3 @@ feature: calle.jpg
 ![tsunamo.jpg]({{site.baseurl}}/assets/images/posts/tsunamo.jpg)
 ![Hurricane_Clouds,_Gulf_of_Mexico,_Cuba.jpg]({{site.baseurl}}/assets/images/posts/Hurricane_Clouds,_Gulf_of_Mexico,_Cuba.jpg)
 ![lika robot.jpg]({{site.baseurl}}/assets/images/posts/lika robot.jpg)
-
