--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -12,6 +12,8 @@ feature: calle.jpg
 
 ![IMG_44536.jpg]({{site.baseurl}}/assets/images/posts/IMG_44536.jpg)
 ![intentional self harm.jpg]({{site.baseurl}}/assets/images/posts/intentional self harm.jpg)
+![den helige anden.jpg]({{site.baseurl}}/assets/images/posts/den helige anden.jpg)
+![IMG_5011.jpg]({{site.baseurl}}/assets/images/posts/IMG_5011.jpg)
 
 ![managing-lo486neliness.jpg]({{site.baseurl}}/assets/images/posts/managing-lo486neliness.jpg)
 ![Ray_of4_Light_6Wide.jpg]({{site.baseurl}}/assets/images/posts/Ray_of4_Light_6Wide.jpg)
