--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -14,4 +14,6 @@ feature: tsunami.jpg
 ![nucleardrem.jpg]({{site.baseurl}}/assets/images/posts/nucleardrem.jpg)
 ![its over.jpg]({{site.baseurl}}/assets/images/posts/its over.jpg)
 ![ghost.jpg]({{site.baseurl}}/assets/images/posts/ghost.jpg)
+![absar.jpg]({{site.baseurl}}/assets/images/posts/absar.jpg)
+
 ![busy-london-underground.jpg]({{site.baseurl}}/assets/images/posts/busy-london-underground.jpg)
