--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -15,5 +15,7 @@ feature: tsunami.jpg
 ![its over.jpg]({{site.baseurl}}/assets/images/posts/its over.jpg)
 ![ghost.jpg]({{site.baseurl}}/assets/images/posts/ghost.jpg)
 ![absar.jpg]({{site.baseurl}}/assets/images/posts/absar.jpg)
+![absar.jpg]({{site.baseurl}}/assets/images/posts/absar.jpg)
+
 
 ![busy-london-underground.jpg]({{site.baseurl}}/assets/images/posts/busy-london-underground.jpg)
