--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -15,6 +15,8 @@ feature: tsunami.jpg
 ![its over.jpg]({{site.baseurl}}/assets/images/posts/its over.jpg)
 ![ghost.jpg]({{site.baseurl}}/assets/images/posts/ghost.jpg)
 ![answn.jpg]({{site.baseurl}}/assets/images/posts/answn.jpg)
+![julskinka.jpg]({{site.baseurl}}/assets/images/posts/julskinka.jpg)
+
 
 
 
