--- a/_posts/2016-10-04-art.md
+++ b/_posts/2016-10-04-art.md
@@ -28,3 +28,5 @@ feature: bored.jpg
 ![roger.jpg]({{site.baseurl}}/assets/images/posts/roger.jpg)
 ![storebror.jpg]({{site.baseurl}}/assets/images/posts/storebror.jpg)
 ![]({{site.baseurl}}/assets/images/posts/soldier%20red.jpg)
+![managing-lo486neliness-Recovered.jpg]({{site.baseurl}}/assets/images/posts/managing-lo486neliness-Recovered.jpg)
+
