--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -6,6 +6,8 @@ feature: '![GODMORNING.jpg]'
 ---
 
 ![GODMORNING.jpg]({{site.baseurl}}/assets/images/posts/GODMORNING.jpg)
+![314_640x480.jpg]({{site.baseurl}}/assets/images/posts/314_640x480.jpg)
+
 ![soltomte.jpg]({{site.baseurl}}/assets/images/posts/soltomte.jpg)
 
 ![towardtheendoftime.jpg]({{site.baseurl}}/assets/images/posts/towardtheendoftime.jpg)
