--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -16,9 +16,5 @@ feature: tsunami.jpg
 ![ghost.jpg]({{site.baseurl}}/assets/images/posts/ghost.jpg)
 ![answn.jpg]({{site.baseurl}}/assets/images/posts/answn.jpg)
 ![julskinka.jpg]({{site.baseurl}}/assets/images/posts/julskinka.jpg)
-
-
-
-
-
+![green.jpg]({{site.baseurl}}/assets/images/posts/green.jpg)
 
