--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -6,6 +6,8 @@ feature: '![GODMORNING.jpg]'
 ---
 
 ![GODMORNING.jpg]({{site.baseurl}}/assets/images/posts/GODMORNING.jpg)
+![julgran-jpg.jpg]({{site.baseurl}}/assets/images/posts/julgran-jpg.jpg)
+
 
 ![jul.jpg]({{site.baseurl}}/assets/images/posts/jul.jpg)
 ![314_640x480.jpg]({{site.baseurl}}/assets/images/posts/314_640x480.jpg)
