--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -5,6 +5,7 @@ published: true
 title: Anorex
 ---
 ![digital_art_texture3eqa_122_by44ew_mercurycode-d7cimke.jpg]({{site.baseurl}}/assets/images/posts/digital_art_texture3eqa_122_by44ew_mercurycode-d7cimke.jpg)
+![245 - Kopia.jpg]({{site.baseurl}}/assets/images/posts/245 - Kopia.jpg)
 
 ![digital_art_texture44re_1ew3ws26tf96ttt_4rsby_mercurycode-d7dvn4h.jpg]({{site.baseurl}}/assets/images/posts/digital_art_texture44re_1ew3ws26tf96ttt_4rsby_mercurycode-d7dvn4h.jpg)
 ![anoxi.jpg]({{site.baseurl}}/assets/images/posts/anoxi.jpg)
