--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -6,6 +6,8 @@ title: Anorex
 ---
 ![digital_art_texture3eqa_122_by44ew_mercurycode-d7cimke.jpg]({{site.baseurl}}/assets/images/posts/digital_art_texture3eqa_122_by44ew_mercurycode-d7cimke.jpg)
 ![245 - Kopia.jpg]({{site.baseurl}}/assets/images/posts/245 - Kopia.jpg)
+![2a.jpg]({{site.baseurl}}/assets/images/posts/2a.jpg)
+
 
 
 ![anoxi.jpg]({{site.baseurl}}/assets/images/posts/anoxi.jpg)
