--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -6,6 +6,8 @@ feature: '![GODMORNING.jpg]'
 ---
 
 ![GODMORNING.jpg]({{site.baseurl}}/assets/images/posts/GODMORNING.jpg)
+![great.jpg]({{site.baseurl}}/assets/images/posts/great.jpg)
+
 ![julgran-jpg.jpg]({{site.baseurl}}/assets/images/posts/julgran-jpg.jpg)
 
 
