--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -19,4 +19,5 @@ feature: tsunami.jpg
 ![green.jpg]({{site.baseurl}}/assets/images/posts/green.jpg)
 ![over.jpg]({{site.baseurl}}/assets/images/posts/over.jpg)
 ![blueshadow.jpg]({{site.baseurl}}/assets/images/posts/blueshadow.jpg)
+![ram.jpg]({{site.baseurl}}/assets/images/posts/ram.jpg)
 
