--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -19,3 +19,4 @@ feature: tsunami.jpg
 
 ![over.jpg]({{site.baseurl}}/assets/images/posts/over.jpg)
 ![blueshadow.jpg]({{site.baseurl}}/assets/images/posts/blueshadow.jpg)
+![newpic.jpg]({{site.baseurl}}/assets/images/posts/newpic.jpg)
