--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -2,7 +2,7 @@
 layout: post
 published: true
 title: daily pic
-feature: '![GODMORNING.jpg]'
+feature: GODMORNING.jpg
 ---
 
 ![GODMORNING.jpg]({{site.baseurl}}/assets/images/posts/GODMORNING.jpg)
