--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -20,3 +20,5 @@ feature: tsunami.jpg
 ![over.jpg]({{site.baseurl}}/assets/images/posts/over.jpg)
 ![blueshadow.jpg]({{site.baseurl}}/assets/images/posts/blueshadow.jpg)
 ![newpic.jpg]({{site.baseurl}}/assets/images/posts/newpic.jpg)
+![Paradise-Beach-447587.jpg]({{site.baseurl}}/assets/images/posts/Paradise-Beach-447587.jpg)
+
