--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -20,4 +20,5 @@ feature: tsunami.jpg
 ![over.jpg]({{site.baseurl}}/assets/images/posts/over.jpg)
 ![blueshadow.jpg]({{site.baseurl}}/assets/images/posts/blueshadow.jpg)
 ![newpic.jpg]({{site.baseurl}}/assets/images/posts/newpic.jpg)
+![shad.jpg]({{site.baseurl}}/assets/images/posts/shad.jpg)
 
