--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -21,4 +21,5 @@ feature: tsunami.jpg
 ![blueshadow.jpg]({{site.baseurl}}/assets/images/posts/blueshadow.jpg)
 ![newpic.jpg]({{site.baseurl}}/assets/images/posts/newpic.jpg)
 ![korspojke.jpg]({{site.baseurl}}/assets/images/posts/korspojke.jpg)
+![bottnar.jpg]({{site.baseurl}}/assets/images/posts/bottnar.jpg)
 
