--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -22,4 +22,5 @@ feature: tsunami.jpg
 ![newpic.jpg]({{site.baseurl}}/assets/images/posts/newpic.jpg)
 ![korspojke.jpg]({{site.baseurl}}/assets/images/posts/korspojke.jpg)
 ![bottnar.jpg]({{site.baseurl}}/assets/images/posts/bottnar.jpg)
+![ex.jpg]({{site.baseurl}}/assets/images/posts/ex.jpg)
 
