--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -25,4 +25,5 @@ feature: tsunami.jpg
 ![ex.jpg]({{site.baseurl}}/assets/images/posts/ex.jpg)
 ![paraply.jpg]({{site.baseurl}}/assets/images/posts/paraply.jpg)
 ![coll.jpg]({{site.baseurl}}/assets/images/posts/coll.jpg)
+![through.jpg]({{site.baseurl}}/assets/images/posts/through.jpg)
 
