--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -6,6 +6,8 @@ feature: GODMORNING.jpg
 ---
 
 ![GODMORNING.jpg]({{site.baseurl}}/assets/images/posts/GODMORNING.jpg)
+![sy471167-730x0847.jpg]({{site.baseurl}}/assets/images/posts/sy471167-730x0847.jpg)
+
 ![sol.jpg]({{site.baseurl}}/assets/images/posts/sol.jpg)
 
 ![great.jpg]({{site.baseurl}}/assets/images/posts/great.jpg)
