--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -24,5 +24,6 @@ feature: tsunami.jpg
 ![bottnar.jpg]({{site.baseurl}}/assets/images/posts/bottnar.jpg)
 ![ex.jpg]({{site.baseurl}}/assets/images/posts/ex.jpg)
 ![paraply.jpg]({{site.baseurl}}/assets/images/posts/paraply.jpg)
+![strutskanske.jpg]({{site.baseurl}}/assets/images/posts/strutskanske.jpg)
 
 ![through.jpg]({{site.baseurl}}/assets/images/posts/through.jpg)
