--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -27,3 +27,5 @@ feature: tsunami.jpg
 ![strutskanske.jpg]({{site.baseurl}}/assets/images/posts/strutskanske.jpg)
 
 ![through.jpg]({{site.baseurl}}/assets/images/posts/through.jpg)
+![vera.jpg]({{site.baseurl}}/assets/images/posts/vera.jpg)
+
