--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -28,4 +28,5 @@ feature: tsunami.jpg
 
 ![through.jpg]({{site.baseurl}}/assets/images/posts/through.jpg)
 ![vera.jpg]({{site.baseurl}}/assets/images/posts/vera.jpg)
+![tyra elvira.jpg]({{site.baseurl}}/assets/images/posts/tyra elvira.jpg)
 
