--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -23,6 +23,8 @@ feature: tsunami.jpg
 ![korspojke.jpg]({{site.baseurl}}/assets/images/posts/korspojke.jpg)
 ![bottnar.jpg]({{site.baseurl}}/assets/images/posts/bottnar.jpg)
 ![ex.jpg]({{site.baseurl}}/assets/images/posts/ex.jpg)
+![hav.jpg]({{site.baseurl}}/assets/images/posts/hav.jpg)
+
 
 
 
