--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -24,6 +24,8 @@ feature: tsunami.jpg
 ![bottnar.jpg]({{site.baseurl}}/assets/images/posts/bottnar.jpg)
 ![ex.jpg]({{site.baseurl}}/assets/images/posts/ex.jpg)
 ![hav.jpg]({{site.baseurl}}/assets/images/posts/hav.jpg)
+![elephant.jpg]({{site.baseurl}}/assets/images/posts/elephant.jpg)
+
 
 
 
