--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -10,11 +10,9 @@ title: KONSTigheter
 ![anoxi.jpg]({{site.baseurl}}/assets/images/posts/anoxi.jpg)
 ![karta.jpg]({{site.baseurl}}/assets/images/posts/karta.jpg)
 ![dju.jpg]({{site.baseurl}}/assets/images/posts/dju.jpg)
-![elefant.jpg]({{site.baseurl}}/assets/images/posts/elefant.jpg)
-![digital_art_texture_80_b4qwqy_mercury3eewcode-d73nhfs.jpg]({{site.baseurl}}/assets/images/posts/digital_art_texture_80_b4qwqy_mercury3eewcode-d73nhfs.jpg)
+]({{site.baseurl}}/assets/images/posts/digital_art_texture_80_b4qwqy_mercury3eewcode-d73nhfs.jpg)
 ![7artyelllow.jpg]({{site.baseurl}}/assets/images/posts/7artyelllow.jpg)
 ![anorexia.jpg]({{site.baseurl}}/assets/images/posts/anorexia.jpg)
 ![anorex.jpg]({{site.baseurl}}/assets/images/posts/anorex.jpg)
 ![andorex.jpg]({{site.baseurl}}/assets/images/posts/andorex.jpg)
 ![anderax.jpg]({{site.baseurl}}/assets/images/posts/anderax.jpg)
-
