--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -9,6 +9,8 @@ feature: calle.jpg
 ![midsommar 1184 32439.jpg]({{site.baseurl}}/assets/images/posts/midsommar 1184 32439.jpg)
 ![paranoja.jpg]({{site.baseurl}}/assets/images/posts/paranoja.jpg)
 ![ande.jpg]({{site.baseurl}}/assets/images/posts/ande.jpg)
+![girls.jpg]({{site.baseurl}}/assets/images/posts/girls.jpg)
+
 
 ![IMG_44536.jpg]({{site.baseurl}}/assets/images/posts/IMG_44536.jpg)
 ![intentional self harm.jpg]({{site.baseurl}}/assets/images/posts/intentional self harm.jpg)
