--- a/_posts/2016-10-04-art.md
+++ b/_posts/2016-10-04-art.md
@@ -29,4 +29,5 @@ feature: bored.jpg
 ![storebror.jpg]({{site.baseurl}}/assets/images/posts/storebror.jpg)
 ![]({{site.baseurl}}/assets/images/posts/soldier%20red.jpg)
 ![managing-lo486neliness-Recovered.jpg]({{site.baseurl}}/assets/images/posts/managing-lo486neliness-Recovered.jpg)
+![Untitl663ed-1.jpg]({{site.baseurl}}/assets/images/posts/Untitl663ed-1.jpg)
 
