--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -6,6 +6,8 @@ feature: GODMORNING.jpg
 ---
 
 ![GODMORNING.jpg]({{site.baseurl}}/assets/images/posts/GODMORNING.jpg)
+![2012.jpg]({{site.baseurl}}/assets/images/posts/2012.jpg)
+
 ![ögon.jpg]({{site.baseurl}}/assets/images/posts/ögon.jpg)
 
 ![think.jpg]({{site.baseurl}}/assets/images/posts/think.jpg)
