--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -6,16 +6,12 @@ feature: GODMORNING.jpg
 ---
 
 ![GODMORNING.jpg]({{site.baseurl}}/assets/images/posts/GODMORNING.jpg)
+![koas.jpg]({{site.baseurl}}/assets/images/posts/koas.jpg)
+
 ![2012.jpg]({{site.baseurl}}/assets/images/posts/2012.jpg)
-
 ![ögon.jpg]({{site.baseurl}}/assets/images/posts/ögon.jpg)
-
 ![think.jpg]({{site.baseurl}}/assets/images/posts/think.jpg)
-
-
 ![destroy.jpg]({{site.baseurl}}/assets/images/posts/destroy.jpg)
-
-
 ![julgran-jpg.jpg]({{site.baseurl}}/assets/images/posts/julgran-jpg.jpg)
 ![soltomte.jpg]({{site.baseurl}}/assets/images/posts/soltomte.jpg)
 ![towardtheendoftime.jpg]({{site.baseurl}}/assets/images/posts/towardtheendoftime.jpg)
