--- a/_posts/2016-10-04-politik.md
+++ b/_posts/2016-10-04-politik.md
@@ -7,6 +7,8 @@ feature: uk ut ur eu.jpg
 ![12g.jpg]({{site.baseurl}}/assets/images/posts/12g.jpg)
 ![bigbrother.jpg]({{site.baseurl}}/assets/images/posts/bigbrother.jpg)
 ![image3e2.jpg]({{site.baseurl}}/assets/images/posts/image3e2.jpg)
+![zombie (2).jpg]({{site.baseurl}}/assets/images/posts/zombie (2).jpg)
+
 
 ![maxresdefault.jpg]({{site.baseurl}}/assets/images/posts/maxresdefault.jpg)
 
