--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -11,6 +11,8 @@ feature: calle.jpg
 ![girls.jpg]({{site.baseurl}}/assets/images/posts/girls.jpg)
 ![managing-lo486neliness.jpg]({{site.baseurl}}/assets/images/posts/managing-lo486neliness.jpg)
 ![homo.jpg]({{site.baseurl}}/assets/images/posts/homo.jpg)
+![beachswing.jpg]({{site.baseurl}}/assets/images/posts/beachswing.jpg)
+
 
 
 
