--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -9,14 +9,11 @@ feature: calle.jpg
 
 ![ande.jpg]({{site.baseurl}}/assets/images/posts/ande.jpg)
 ![girls.jpg]({{site.baseurl}}/assets/images/posts/girls.jpg)
+![ande.jpg]({{site.baseurl}}/assets/images/posts/ande.jpg)
+
 ![managing-lo486neliness.jpg]({{site.baseurl}}/assets/images/posts/managing-lo486neliness.jpg)
 ![homo.jpg]({{site.baseurl}}/assets/images/posts/homo.jpg)
 ![beachswing.jpg]({{site.baseurl}}/assets/images/posts/beachswing.jpg)
-
-
-
-
-
 ![Copy of Ray_o42f_Light54567669_Wide.jpg]({{site.baseurl}}/assets/images/posts/Copy of Ray_o42f_Light54567669_Wide.jpg)
 ![Naked3 6Girl (2).jpg]({{site.baseurl}}/assets/images/posts/Naked3 6Girl (2).jpg)
 ![my face 0553 (2).jpg]({{site.baseurl}}/assets/images/posts/my face 0553 (2).jpg)
