--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -22,3 +22,5 @@ feature: tsunami.jpg
 ![hav.jpg]({{site.baseurl}}/assets/images/posts/hav.jpg)
 ![elephant.jpg]({{site.baseurl}}/assets/images/posts/elephant.jpg)
 ![tyra elvira.jpg]({{site.baseurl}}/assets/images/posts/tyra elvira.jpg)
+![ök1.jpg]({{site.baseurl}}/assets/images/posts/ök1.jpg)
+
