--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -6,9 +6,11 @@ feature: GODMORNING.jpg
 ---
 
 ![GODMORNING.jpg]({{site.baseurl}}/assets/images/posts/GODMORNING.jpg)
-![klarconform.jpg]({{site.baseurl}}/assets/images/posts/klarconform.jpg)
+![fast.jpg]({{site.baseurl}}/assets/images/posts/fast.jpg)
 
+![klarconform.jpg]({{site.baseurl}}/assets/images/posts/klarconform.jpg)
 ![pin.jpg]({{site.baseurl}}/assets/images/posts/pin.jpg)
+
 
 ![yellowrobot.jpg]({{site.baseurl}}/assets/images/posts/yellowrobot.jpg)
 
