--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -24,4 +24,5 @@ feature: tsunami.jpg
 ![tyra elvira.jpg]({{site.baseurl}}/assets/images/posts/tyra elvira.jpg)
 ![ök1.jpg]({{site.baseurl}}/assets/images/posts/ök1.jpg)
 ![loll.jpg]({{site.baseurl}}/assets/images/posts/loll.jpg)
+![dimma8.jpg]({{site.baseurl}}/assets/images/posts/dimma8.jpg)
 
