--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -6,6 +6,8 @@ feature: GODMORNING.jpg
 ---
 
 ![GODMORNING.jpg]({{site.baseurl}}/assets/images/posts/GODMORNING.jpg)
+![You-either-get-bitter-or-you-get-better.jpg]({{site.baseurl}}/assets/images/posts/You-either-get-bitter-or-you-get-better.jpg)
+
 ![fast.jpg]({{site.baseurl}}/assets/images/posts/fast.jpg)
 
 ![klarconform.jpg]({{site.baseurl}}/assets/images/posts/klarconform.jpg)
