--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -6,6 +6,8 @@ feature: GODMORNING.jpg
 ---
 
 ![GODMORNING.jpg]({{site.baseurl}}/assets/images/posts/GODMORNING.jpg)
+![NIGHTMARE.jpg]({{site.baseurl}}/assets/images/posts/NIGHTMARE.jpg)
+
 ![bitter.jpg]({{site.baseurl}}/assets/images/posts/bitter.jpg)
 
 
