--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -23,5 +23,6 @@ feature: tsunami.jpg
 ![elephant.jpg]({{site.baseurl}}/assets/images/posts/elephant.jpg)
 ![tyra elvira.jpg]({{site.baseurl}}/assets/images/posts/tyra elvira.jpg)
 ![ök1.jpg]({{site.baseurl}}/assets/images/posts/ök1.jpg)
-
 ![dimma8.jpg]({{site.baseurl}}/assets/images/posts/dimma8.jpg)
+![snasha.jpg]({{site.baseurl}}/assets/images/posts/snasha.jpg)
+
