--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -2,7 +2,7 @@
 layout: post
 feature: 1.jpg
 published: true
-title: KONSTigheter
+title: FIONAS ANTIGUBBVÄLDE SIDA
 ---
 ![digital_art_texture3eqa_122_by44ew_mercurycode-d7cimke.jpg]({{site.baseurl}}/assets/images/posts/digital_art_texture3eqa_122_by44ew_mercurycode-d7cimke.jpg)
 ![245 - Kopia.jpg]({{site.baseurl}}/assets/images/posts/245 - Kopia.jpg)
