--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -4,3 +4,4 @@ feature: 1.jpg
 published: true
 title: FIONAS ANTIGUBBVÄLDE SIDA
 ---
+![WE CAN.jpg]({{site.baseurl}}/assets/images/posts/WE CAN.jpg)
