--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-feature: 1.jpg
 published: true
 title: FIONAS ANTIGUBBVÄLDE SIDA
 ---
 ![WE CAN.jpg]({{site.baseurl}}/assets/images/posts/WE CAN.jpg)
+![emma-watson-feminism-4.jpg]({{site.baseurl}}/assets/images/posts/emma-watson-feminism-4.jpg)
