--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -2,6 +2,7 @@
 layout: post
 published: true
 title: FIONAS ANTIGUBBVÄLDE SIDA
+feature: WE CAN.jpg
 ---
 ![WE CAN.jpg]({{site.baseurl}}/assets/images/posts/WE CAN.jpg)
 ![emma-watson-feminism-4.jpg]({{site.baseurl}}/assets/images/posts/emma-watson-feminism-4.jpg)
