--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -4,5 +4,6 @@ published: true
 title: FIONAS ANTIGUBBVÄLDE SIDA
 feature: WE CAN.jpg
 ---
-![WE CAN.jpg]({{site.baseurl}}/assets/images/posts/WE CAN.jpg)
+![![cage.jpg]({{site.baseurl}}/assets/images/posts/cage.jpg)
+]({{site.baseurl}}/assets/images/posts/WE CAN.jpg)
 ![emma-watson-feminism-4.jpg]({{site.baseurl}}/assets/images/posts/emma-watson-feminism-4.jpg)
