--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -8,4 +8,5 @@ feature: WE CAN.jpg
 ]({{site.baseurl}}/assets/images/posts/WE CAN.jpg)
 ![emma-watson-feminism-4.jpg]({{site.baseurl}}/assets/images/posts/emma-watson-feminism-4.jpg)
 ![cage.jpg]({{site.baseurl}}/assets/images/posts/cage.jpg)
+![betty.jpg]({{site.baseurl}}/assets/images/posts/betty.jpg)
 
