--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -10,4 +10,5 @@ feature: WE CAN.jpg
 ![cage.jpg]({{site.baseurl}}/assets/images/posts/cage.jpg)
 ![betty.jpg]({{site.baseurl}}/assets/images/posts/betty.jpg)
 ![teck.jpg]({{site.baseurl}}/assets/images/posts/teck.jpg)
+![beach-style-paintings.jpg]({{site.baseurl}}/assets/images/posts/beach-style-paintings.jpg)
 
