--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -11,4 +11,5 @@ feature: WE CAN.jpg
 ![betty.jpg]({{site.baseurl}}/assets/images/posts/betty.jpg)
 ![teck.jpg]({{site.baseurl}}/assets/images/posts/teck.jpg)
 ![beach-style-paintings.jpg]({{site.baseurl}}/assets/images/posts/beach-style-paintings.jpg)
+![Kali_GOE.jpg]({{site.baseurl}}/assets/images/posts/Kali_GOE.jpg)
 
