--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -12,4 +12,5 @@ feature: WE CAN.jpg
 ![teck.jpg]({{site.baseurl}}/assets/images/posts/teck.jpg)
 ![beach-style-paintings.jpg]({{site.baseurl}}/assets/images/posts/beach-style-paintings.jpg)
 ![Kali_GOE.jpg]({{site.baseurl}}/assets/images/posts/Kali_GOE.jpg)
+![strong.jpg]({{site.baseurl}}/assets/images/posts/strong.jpg)
 
