--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -13,4 +13,5 @@ feature: WE CAN.jpg
 ![beach-style-paintings.jpg]({{site.baseurl}}/assets/images/posts/beach-style-paintings.jpg)
 ![Kali_GOE.jpg]({{site.baseurl}}/assets/images/posts/Kali_GOE.jpg)
 ![strong.jpg]({{site.baseurl}}/assets/images/posts/strong.jpg)
+![det.jpg]({{site.baseurl}}/assets/images/posts/det.jpg)
 
