--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -14,4 +14,5 @@ feature: WE CAN.jpg
 ![Kali_GOE.jpg]({{site.baseurl}}/assets/images/posts/Kali_GOE.jpg)
 ![strong.jpg]({{site.baseurl}}/assets/images/posts/strong.jpg)
 ![det.jpg]({{site.baseurl}}/assets/images/posts/det.jpg)
+![carr.jpg]({{site.baseurl}}/assets/images/posts/carr.jpg)
 
