--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -15,4 +15,5 @@ feature: WE CAN.jpg
 ![strong.jpg]({{site.baseurl}}/assets/images/posts/strong.jpg)
 ![det.jpg]({{site.baseurl}}/assets/images/posts/det.jpg)
 ![carr.jpg]({{site.baseurl}}/assets/images/posts/carr.jpg)
+![moral.jpg]({{site.baseurl}}/assets/images/posts/moral.jpg)
 
