--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -6,6 +6,8 @@ feature: GODMORNING.jpg
 ---
 
 ![GODMORNING.jpg]({{site.baseurl}}/assets/images/posts/GODMORNING.jpg)
+![IMG_7113.jpg]({{site.baseurl}}/assets/images/posts/IMG_7113.jpg)
+
 ![good.jpg]({{site.baseurl}}/assets/images/posts/good.jpg)
 
 ![sh.jpg]({{site.baseurl}}/assets/images/posts/sh.jpg)
