--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -4,6 +4,7 @@ published: true
 title: FIONAS ANTIGUBBVÄLDE SIDA
 feature: WE CAN.jpg
 ---
+![womb.jpg]({{site.baseurl}}/assets/images/posts/womb.jpg)
 ![![cage.jpg]({{site.baseurl}}/assets/images/posts/cage.jpg)
 ]({{site.baseurl}}/assets/images/posts/WE CAN.jpg)
 ![emma-watson-feminism-4.jpg]({{site.baseurl}}/assets/images/posts/emma-watson-feminism-4.jpg)
@@ -16,4 +17,3 @@ feature: WE CAN.jpg
 ![det.jpg]({{site.baseurl}}/assets/images/posts/det.jpg)
 ![carr.jpg]({{site.baseurl}}/assets/images/posts/carr.jpg)
 ![moral.jpg]({{site.baseurl}}/assets/images/posts/moral.jpg)
-
