--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -17,3 +17,5 @@ feature: WE CAN.jpg
 ![det.jpg]({{site.baseurl}}/assets/images/posts/det.jpg)
 ![carr.jpg]({{site.baseurl}}/assets/images/posts/carr.jpg)
 ![moral.jpg]({{site.baseurl}}/assets/images/posts/moral.jpg)
+![236311_04big.jpg]({{site.baseurl}}/assets/images/posts/236311_04big.jpg)
+
