--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -18,4 +18,5 @@ feature: WE CAN.jpg
 ![carr.jpg]({{site.baseurl}}/assets/images/posts/carr.jpg)
 ![moral.jpg]({{site.baseurl}}/assets/images/posts/moral.jpg)
 ![236311_04big.jpg]({{site.baseurl}}/assets/images/posts/236311_04big.jpg)
+![hor.jpg]({{site.baseurl}}/assets/images/posts/hor.jpg)
 
