--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -12,6 +12,8 @@ feature: tsunami.jpg
 
 
 ![its over.jpg]({{site.baseurl}}/assets/images/posts/its over.jpg)
+![gul.jpg]({{site.baseurl}}/assets/images/posts/gul.jpg)
+
 
 ![julskinka.jpg]({{site.baseurl}}/assets/images/posts/julskinka.jpg)
 ![over.jpg]({{site.baseurl}}/assets/images/posts/over.jpg)
@@ -25,4 +27,3 @@ feature: tsunami.jpg
 ![ök1.jpg]({{site.baseurl}}/assets/images/posts/ök1.jpg)
 ![dimma8.jpg]({{site.baseurl}}/assets/images/posts/dimma8.jpg)
 ![snasha.jpg]({{site.baseurl}}/assets/images/posts/snasha.jpg)
-
