--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -20,4 +20,6 @@ feature: WE CAN.jpg
 ![236311_04big.jpg]({{site.baseurl}}/assets/images/posts/236311_04big.jpg)
 ![hor.jpg]({{site.baseurl}}/assets/images/posts/hor.jpg)
 ![235288_09big.jpg]({{site.baseurl}}/assets/images/posts/235288_09big.jpg)
+![beuty.jpg]({{site.baseurl}}/assets/images/posts/beuty.jpg)
+
 
