--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -21,5 +21,7 @@ feature: WE CAN.jpg
 ![hor.jpg]({{site.baseurl}}/assets/images/posts/hor.jpg)
 ![235288_09big.jpg]({{site.baseurl}}/assets/images/posts/235288_09big.jpg)
 ![beuty.jpg]({{site.baseurl}}/assets/images/posts/beuty.jpg)
+![d1a1b6603c609f941da550d6d0464bbe.jpg]({{site.baseurl}}/assets/images/posts/d1a1b6603c609f941da550d6d0464bbe.jpg)
+
 
 
