--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -22,6 +22,8 @@ feature: WE CAN.jpg
 ![235288_09big.jpg]({{site.baseurl}}/assets/images/posts/235288_09big.jpg)
 ![beuty.jpg]({{site.baseurl}}/assets/images/posts/beuty.jpg)
 ![d1a1b6603c609f941da550d6d0464bbe.jpg]({{site.baseurl}}/assets/images/posts/d1a1b6603c609f941da550d6d0464bbe.jpg)
+![power.jpg]({{site.baseurl}}/assets/images/posts/power.jpg)
+
 
 
 
