--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -6,6 +6,8 @@ feature: tsunami.jpg
 ---
 
 
+![storstar.jpg]({{site.baseurl}}/assets/images/posts/storstar.jpg)
+
 ![DRAKE.jpg]({{site.baseurl}}/assets/images/posts/DRAKE.jpg)
 
 ![rum.jpg]({{site.baseurl}}/assets/images/posts/rum.jpg)
