--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -7,6 +7,8 @@ feature: tsunami.jpg
 
 
 ![storstar.jpg]({{site.baseurl}}/assets/images/posts/storstar.jpg)
+![surr.jpg]({{site.baseurl}}/assets/images/posts/surr.jpg)
+
 
 ![DRAKE.jpg]({{site.baseurl}}/assets/images/posts/DRAKE.jpg)
 
