--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -9,6 +9,8 @@ feature: tsunami.jpg
 ![storstar.jpg]({{site.baseurl}}/assets/images/posts/storstar.jpg)
 ![surr.jpg]({{site.baseurl}}/assets/images/posts/surr.jpg)
 ![sha.jpg]({{site.baseurl}}/assets/images/posts/sha.jpg)
+![green.jpg]({{site.baseurl}}/assets/images/posts/green.jpg)
+
 
 
 ![its over.jpg]({{site.baseurl}}/assets/images/posts/its over.jpg)
