--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -23,7 +23,5 @@ feature: WE CAN.jpg
 ![beuty.jpg]({{site.baseurl}}/assets/images/posts/beuty.jpg)
 ![d1a1b6603c609f941da550d6d0464bbe.jpg]({{site.baseurl}}/assets/images/posts/d1a1b6603c609f941da550d6d0464bbe.jpg)
 ![power.jpg]({{site.baseurl}}/assets/images/posts/power.jpg)
-
-
-
+![64766966-cannibalism-people.jpg]({{site.baseurl}}/assets/images/posts/64766966-cannibalism-people.jpg)
 
