--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -6,6 +6,8 @@ feature: tsunami.jpg
 ---
 
 
+![mört.jpg]({{site.baseurl}}/assets/images/posts/mört.jpg)
+
 ![storstar.jpg]({{site.baseurl}}/assets/images/posts/storstar.jpg)
 ![surr.jpg]({{site.baseurl}}/assets/images/posts/surr.jpg)
 ![sha.jpg]({{site.baseurl}}/assets/images/posts/sha.jpg)
