--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -4,6 +4,8 @@ published: true
 title: FIONAS ANTIGUBBVÄLDE SIDA
 feature: WE CAN.jpg
 ---
+![dragon.jpg]({{site.baseurl}}/assets/images/posts/dragon.jpg)
+
 ![womb.jpg]({{site.baseurl}}/assets/images/posts/womb.jpg)
 ![![cage.jpg]({{site.baseurl}}/assets/images/posts/cage.jpg)
 ]({{site.baseurl}}/assets/images/posts/WE CAN.jpg)
@@ -24,4 +26,3 @@ feature: WE CAN.jpg
 ![d1a1b6603c609f941da550d6d0464bbe.jpg]({{site.baseurl}}/assets/images/posts/d1a1b6603c609f941da550d6d0464bbe.jpg)
 ![power.jpg]({{site.baseurl}}/assets/images/posts/power.jpg)
 ![64766966-cannibalism-people.jpg]({{site.baseurl}}/assets/images/posts/64766966-cannibalism-people.jpg)
-
