--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -4,6 +4,8 @@ published: true
 title: FIONAS ANTIGUBBVÄLDE SIDA
 feature: WE CAN.jpg
 ---
+![go0.jpg]({{site.baseurl}}/assets/images/posts/go0.jpg)
+
 ![dragon.jpg]({{site.baseurl}}/assets/images/posts/dragon.jpg)
 ![womb.jpg]({{site.baseurl}}/assets/images/posts/womb.jpg)
 ![![cage.jpg]({{site.baseurl}}/assets/images/posts/cage.jpg)
