--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -9,10 +9,11 @@ feature: calle.jpg
 
 ![ande.jpg]({{site.baseurl}}/assets/images/posts/ande.jpg)
 ![girls.jpg]({{site.baseurl}}/assets/images/posts/girls.jpg)
-
-
 ![managing-lo486neliness.jpg]({{site.baseurl}}/assets/images/posts/managing-lo486neliness.jpg)
 ![homo.jpg]({{site.baseurl}}/assets/images/posts/homo.jpg)
+![BlackWhi66te68x5199808877small copy.jpg]({{site.baseurl}}/assets/images/posts/BlackWhi66te68x5199808877small copy.jpg)
+![IMG_443336.jpg]({{site.baseurl}}/assets/images/posts/IMG_443336.jpg)
+
 ![beachswing.jpg]({{site.baseurl}}/assets/images/posts/beachswing.jpg)
 ![Copy of Ray_o42f_Light54567669_Wide.jpg]({{site.baseurl}}/assets/images/posts/Copy of Ray_o42f_Light54567669_Wide.jpg)
 ![Naked3 6Girl (2).jpg]({{site.baseurl}}/assets/images/posts/Naked3 6Girl (2).jpg)
