--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -13,6 +13,7 @@ feature: calle.jpg
 ![homo.jpg]({{site.baseurl}}/assets/images/posts/homo.jpg)
 ![BlackWhi66te68x5199808877small copy.jpg]({{site.baseurl}}/assets/images/posts/BlackWhi66te68x5199808877small copy.jpg)
 ![IMG_443336.jpg]({{site.baseurl}}/assets/images/posts/IMG_443336.jpg)
+![boy.jpg]({{site.baseurl}}/assets/images/posts/boy.jpg)
 
 ![beachswing.jpg]({{site.baseurl}}/assets/images/posts/beachswing.jpg)
 ![Copy of Ray_o42f_Light54567669_Wide.jpg]({{site.baseurl}}/assets/images/posts/Copy of Ray_o42f_Light54567669_Wide.jpg)
