--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -31,3 +31,7 @@ feature: calle.jpg
 ![tsunamo.jpg]({{site.baseurl}}/assets/images/posts/tsunamo.jpg)
 ![Hurricane_Clouds,_Gulf_of_Mexico,_Cuba.jpg]({{site.baseurl}}/assets/images/posts/Hurricane_Clouds,_Gulf_of_Mexico,_Cuba.jpg)
 ![lika robot.jpg]({{site.baseurl}}/assets/images/posts/lika robot.jpg)
+![139.jpg]({{site.baseurl}}/assets/images/posts/139.jpg)
+![betry.jpg]({{site.baseurl}}/assets/images/posts/betry.jpg)
+![bored.jpg]({{site.baseurl}}/assets/images/posts/bored.jpg)
+
