--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -14,6 +14,10 @@ feature: calle.jpg
 ![BlackWhi66te68x5199808877small copy.jpg]({{site.baseurl}}/assets/images/posts/BlackWhi66te68x5199808877small copy.jpg)
 ![IMG_443336.jpg]({{site.baseurl}}/assets/images/posts/IMG_443336.jpg)
 ![boy.jpg]({{site.baseurl}}/assets/images/posts/boy.jpg)
+![fi77re_601.jpg]({{site.baseurl}}/assets/images/posts/fi77re_601.jpg)
+![gray-lt-brown.jpg]({{site.baseurl}}/assets/images/posts/gray-lt-brown.jpg)
+![jessicaface.jpg]({{site.baseurl}}/assets/images/posts/jessicaface.jpg)
+
 
 ![beachswing.jpg]({{site.baseurl}}/assets/images/posts/beachswing.jpg)
 ![Copy of Ray_o42f_Light54567669_Wide.jpg]({{site.baseurl}}/assets/images/posts/Copy of Ray_o42f_Light54567669_Wide.jpg)
