--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -17,8 +17,6 @@ feature: calle.jpg
 ![fi77re_601.jpg]({{site.baseurl}}/assets/images/posts/fi77re_601.jpg)
 ![gray-lt-brown.jpg]({{site.baseurl}}/assets/images/posts/gray-lt-brown.jpg)
 ![jessicaface.jpg]({{site.baseurl}}/assets/images/posts/jessicaface.jpg)
-
-
 ![beachswing.jpg]({{site.baseurl}}/assets/images/posts/beachswing.jpg)
 ![Copy of Ray_o42f_Light54567669_Wide.jpg]({{site.baseurl}}/assets/images/posts/Copy of Ray_o42f_Light54567669_Wide.jpg)
 ![Naked3 6Girl (2).jpg]({{site.baseurl}}/assets/images/posts/Naked3 6Girl (2).jpg)
@@ -38,4 +36,6 @@ feature: calle.jpg
 ![139.jpg]({{site.baseurl}}/assets/images/posts/139.jpg)
 ![betry.jpg]({{site.baseurl}}/assets/images/posts/betry.jpg)
 ![bored.jpg]({{site.baseurl}}/assets/images/posts/bored.jpg)
+![011212299892005.jpg]({{site.baseurl}}/assets/images/posts/011212299892005.jpg)
+
 
