--- a/_posts/2016-10-04-royal.md
+++ b/_posts/2016-10-04-royal.md
@@ -17,6 +17,8 @@ feature: calle.jpg
 ![fi77re_601.jpg]({{site.baseurl}}/assets/images/posts/fi77re_601.jpg)
 ![gray-lt-brown.jpg]({{site.baseurl}}/assets/images/posts/gray-lt-brown.jpg)
 ![jessicaface.jpg]({{site.baseurl}}/assets/images/posts/jessicaface.jpg)
+![höna.jpg]({{site.baseurl}}/assets/images/posts/höna.jpg)
+
 ![beachswing.jpg]({{site.baseurl}}/assets/images/posts/beachswing.jpg)
 ![Copy of Ray_o42f_Light54567669_Wide.jpg]({{site.baseurl}}/assets/images/posts/Copy of Ray_o42f_Light54567669_Wide.jpg)
 ![Naked3 6Girl (2).jpg]({{site.baseurl}}/assets/images/posts/Naked3 6Girl (2).jpg)
