--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -6,6 +6,8 @@ feature: GODMORNING.jpg
 ---
 
 ![GODMORNING.jpg]({{site.baseurl}}/assets/images/posts/GODMORNING.jpg)
+![elephant.jpg]({{site.baseurl}}/assets/images/posts/elephant.jpg)
+
 ![yokomoroe8d43.jpg]({{site.baseurl}}/assets/images/posts/yokomoroe8d43.jpg)
 
 ![hot.jpg]({{site.baseurl}}/assets/images/posts/hot.jpg)
