--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -12,6 +12,8 @@ feature: tsunami.jpg
 ![surr.jpg]({{site.baseurl}}/assets/images/posts/surr.jpg)
 ![sha.jpg]({{site.baseurl}}/assets/images/posts/sha.jpg)
 ![green.jpg]({{site.baseurl}}/assets/images/posts/green.jpg)
+![kosmos.jpg]({{site.baseurl}}/assets/images/posts/kosmos.jpg)
+
 
 
 
