--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -12,6 +12,8 @@ feature: tsunami.jpg
 ![surr.jpg]({{site.baseurl}}/assets/images/posts/surr.jpg)
 ![sha.jpg]({{site.baseurl}}/assets/images/posts/sha.jpg)
 ![green.jpg]({{site.baseurl}}/assets/images/posts/green.jpg)
+![lila.jpg]({{site.baseurl}}/assets/images/posts/lila.jpg)
+
 
 ![its over.jpg]({{site.baseurl}}/assets/images/posts/its over.jpg)
 ![gul.jpg]({{site.baseurl}}/assets/images/posts/gul.jpg)
