--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -6,28 +6,19 @@ feature: GODMORNING.jpg
 ---
 
 ![GODMORNING.jpg]({{site.baseurl}}/assets/images/posts/GODMORNING.jpg)
+![sorry.jpg]({{site.baseurl}}/assets/images/posts/sorry.jpg)
+
 ![elephant.jpg]({{site.baseurl}}/assets/images/posts/elephant.jpg)
-
 ![yokomoroe8d43.jpg]({{site.baseurl}}/assets/images/posts/yokomoroe8d43.jpg)
-
 ![hot.jpg]({{site.baseurl}}/assets/images/posts/hot.jpg)
-
 ![IMG_7113.jpg]({{site.baseurl}}/assets/images/posts/IMG_7113.jpg)
-
 ![good.jpg]({{site.baseurl}}/assets/images/posts/good.jpg)
-
 ![sh.jpg]({{site.baseurl}}/assets/images/posts/sh.jpg)
-
 ![NIGHTMARE.jpg]({{site.baseurl}}/assets/images/posts/NIGHTMARE.jpg)
-
 ![bitter.jpg]({{site.baseurl}}/assets/images/posts/bitter.jpg)
-
-
 ![fast.jpg]({{site.baseurl}}/assets/images/posts/fast.jpg)
-
 ![klarconform.jpg]({{site.baseurl}}/assets/images/posts/klarconform.jpg)
 ![koas.jpg]({{site.baseurl}}/assets/images/posts/koas.jpg)
-
 ![2012.jpg]({{site.baseurl}}/assets/images/posts/2012.jpg)
 ![ögon.jpg]({{site.baseurl}}/assets/images/posts/ögon.jpg)
 ![think.jpg]({{site.baseurl}}/assets/images/posts/think.jpg)
