--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -6,6 +6,9 @@ feature: GODMORNING.jpg
 ---
 
 ![GODMORNING.jpg]({{site.baseurl}}/assets/images/posts/GODMORNING.jpg)
+![glad.jpg]({{site.baseurl}}/assets/images/posts/glad.jpg)
+
+
 
 ![elephant.jpg]({{site.baseurl}}/assets/images/posts/elephant.jpg)
 ![yokomoroe8d43.jpg]({{site.baseurl}}/assets/images/posts/yokomoroe8d43.jpg)
