--- a/_posts/2016-12-06-anorex.md
+++ b/_posts/2016-12-06-anorex.md
@@ -5,6 +5,8 @@ title: FIONAS ANTIGUBBVÄLDE SIDA
 feature: WE CAN.jpg
 ---
 ![go0.jpg]({{site.baseurl}}/assets/images/posts/go0.jpg)
+![balls.jpg]({{site.baseurl}}/assets/images/posts/balls.jpg)
+
 
 ![dragon.jpg]({{site.baseurl}}/assets/images/posts/dragon.jpg)
 ![womb.jpg]({{site.baseurl}}/assets/images/posts/womb.jpg)
