--- a/_posts/2016-12-15-dream.md
+++ b/_posts/2016-12-15-dream.md
@@ -5,6 +5,8 @@ title: DREAM
 feature: tsunami.jpg
 ---
 
+![spratt.jpg]({{site.baseurl}}/assets/images/posts/spratt.jpg)
+
 
 ![mört.jpg]({{site.baseurl}}/assets/images/posts/mört.jpg)
 
