--- a/_posts/2016-12-21-daily-pic.md
+++ b/_posts/2016-12-21-daily-pic.md
@@ -6,14 +6,11 @@ feature: GODMORNING.jpg
 ---
 
 ![GODMORNING.jpg]({{site.baseurl}}/assets/images/posts/GODMORNING.jpg)
+![reddream.jpg]({{site.baseurl}}/assets/images/posts/reddream.jpg)
+
 ![red.jpg]({{site.baseurl}}/assets/images/posts/red.jpg)
-
 ![angel.jpg]({{site.baseurl}}/assets/images/posts/angel.jpg)
-
 ![glad.jpg]({{site.baseurl}}/assets/images/posts/glad.jpg)
-
-
-
 ![elephant.jpg]({{site.baseurl}}/assets/images/posts/elephant.jpg)
 ![yokomoroe8d43.jpg]({{site.baseurl}}/assets/images/posts/yokomoroe8d43.jpg)
 ![hot.jpg]({{site.baseurl}}/assets/images/posts/hot.jpg)
